--- a/DRRadiov3/res/layout-land/kanal_frag.xml
+++ b/DRRadiov3/res/layout-land/kanal_frag.xml
@@ -22,7 +22,8 @@
       android:textSize="18sp"
       android:text="Indlæser, vent venligst..."/>
 
-  <LinearLayout android:background="@color/hvid"
+  <LinearLayout android:id="@+id/rulTilAktuelUdsendelse"
+                android:background="@drawable/elem_hvid_bg"
                 android:layout_gravity="top|center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -31,8 +32,8 @@
       android:id="@+id/hør_live"
       android:layout_width="wrap_content"
       android:layout_height="@dimen/hørknap_højde"
-      android:layout_marginLeft="8dp"
-      android:layout_marginRight="8dp"
+      android:layout_marginLeft="44dp"
+      android:layout_marginRight="44dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
       android:layout_gravity="center"
