--- a/DRRadiov3/res/layout/afspiller_levendeikon.xml
+++ b/DRRadiov3/res/layout/afspiller_levendeikon.xml
@@ -4,15 +4,15 @@
               android:id="@+id/yderstelayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:background="@android:color/darker_gray">
+              android:orientation="horizontal"
+              android:gravity="center_vertical"
+              android:background="@color/grå70">
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="fill_parent"
-      android:orientation="horizontal"
-      android:paddingBottom="1dp"
-      android:background="@drawable/border_bottom">
+
+  <LinearLayout android:orientation="vertical"
+                android:gravity="center"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -20,74 +20,74 @@
         android:contentDescription="D R"
         android:src="@drawable/dr_logo"
         />
-
-    <TextView
-        android:layout_width="0px"
-        android:layout_weight="1"
-        android:text=""
-        android:layout_height="wrap_content"/>
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="44dp"
+        android:scaleType="center"
+        android:contentDescription="start/stop"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:id="@+id/startStopKnap"
+        android:src="@drawable/afspiller_spil"
+        />
 
   </LinearLayout>
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="fill_parent"
-      android:orientation="horizontal">
-
-    <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:id="@+id/startStopKnap"
-        android:contentDescription="start/stop"
-        android:src="@android:drawable/ic_media_play"
-        android:layout_gravity="center_vertical"
-        android:background="@android:color/darker_gray"
-        />
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0px"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:layout_marginLeft="8dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
+      <LinearLayout android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/kanallogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/kanalappendix_ab4"
+            />
       <TextView
-          android:id="@+id/titel"
-          android:layout_width="match_parent"
+          android:id="@+id/direktetekst"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="P3 Live"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:textStyle="bold"
-          android:maxLines="2"
+          android:text=" LIVE"
           tools:ignore="HardcodedText"
-          android:textColor="@color/sort"/>
+          android:textColor="@color/grå40"/>
+      </LinearLayout>
 
       <TextView
           android:id="@+id/metainformation"
-          android:layout_width="match_parent"
+          android:layout_weight="1"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="P3"
+          android:textSize="@dimen/metainfo_skrifstørrelse"
+          android:text="Orientering på P1"
           android:singleLine="true"
           tools:ignore="HardcodedText"
-          android:textColor="@color/grå05x"/>
+          android:textColor="@color/hvid"/>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/progressBar"
+  <LinearLayout
+      android:id="@+id/progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:gravity="left"
+      android:visibility="visible"
+      >
+
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
-        android:visibility="visible"
-        >
-
-      <ProgressBar
-          android:layout_width="wrap_content"
-          android:layout_height="44dp"
-          />
+        />
     </LinearLayout>
   </LinearLayout>
 
 
-</LinearLayout>
