--- a/DRRadiov3/res/layout/afspiller_levendeikon.xml
+++ b/DRRadiov3/res/layout/afspiller_levendeikon.xml
@@ -58,6 +58,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=" LIVE"
+          android:singleLine="true"
           tools:ignore="HardcodedText"
           android:textColor="@color/grå40"/>
       </LinearLayout>
