--- a/DRRadiov3/res/layout/kanal_elem1_udsendelse.xml
+++ b/DRRadiov3/res/layout/kanal_elem1_udsendelse.xml
@@ -29,7 +29,7 @@
       android:layout_height="wrap_content"
       android:text="17.04"
       android:textColor="@color/grå40"
-      android:textAppearance="?android:attr/textAppearance"
+      android:textSize="@dimen/metainfo_skrifstørrelse"
       tools:ignore="HardcodedText"
       />
 
@@ -41,5 +41,6 @@
       android:layout_weight="1"
       android:text="P3 Sporten  |  Polarkreis 18"
       android:maxLines="2"
+      android:textSize="@dimen/metainfo_skrifstørrelse"
       tools:ignore="HardcodedText"/>
 </LinearLayout>
