--- a/DRRadiov3/res/layout/programserie_elem1_nyeste_udsendelse.xml
+++ b/DRRadiov3/res/layout/programserie_elem1_nyeste_udsendelse.xml
@@ -64,6 +64,9 @@
       android:textColor="@color/hvid"
       android:focusable="false"
       android:focusableInTouchMode="false"
+      android:paddingLeft="4dp"
+      android:paddingRight="4dp"
+      android:textSize="@dimen/metainfo_skrifstørrelse"
       android:background="@drawable/knap_blaa_bg"/>
   </LinearLayout>
 
