--- a/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
@@ -33,20 +33,18 @@
       android:background="@drawable/udsendelse_baggrundsgradient"
       />
 
-  <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       android:padding="12dp"
+      android:gravity="center_vertical"
       android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/kanallogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/skrald__kanallogo_p3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:src="@drawable/skrald__kanallogo_p3"/>
 
     <TextView
         android:id="@+id/p4navn"
@@ -56,13 +54,18 @@
         android:textStyle="bold"
         android:layout_marginLeft="4dp"
         android:shadowColor="@color/hvid"
-        android:shadowRadius="4"
-        android:layout_alignBottom="@+id/kanallogo"
-        android:layout_toRightOf="@+id/kanallogo"
-        android:layout_toEndOf="@+id/kanallogo"/>
+        android:shadowRadius="4"/>
+    </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom"
+      android:padding="12dp"
+      android:orientation="vertical">
 
 
-    <TextView
+  <TextView
         android:id="@+id/titel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,9 +78,7 @@
         android:textStyle="bold"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:layout_above="@+id/starttid"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+      />
 
     <TextView
         android:id="@+id/starttid"
@@ -89,11 +90,10 @@
         android:text="11. sep. 2014"
         android:textSize="20sp"
         android:paddingLeft="4dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:paddingRight="4dp"
+        />
 
-  </RelativeLayout>
+  </LinearLayout>
 
   <TextView
       android:id="@+id/hør_tekst"
