--- a/DRRadiov3/res/values/dr_styles.xml
+++ b/DRRadiov3/res/values/dr_styles.xml
@@ -19,6 +19,13 @@
   </style>
 
   <style name="Theme.Indstillinger" parent="@style/Theme.AppCompat.Light">
+    <item name="android:windowBackground">@color/hvid</item>
+    <item name="windowActionBar">false</item>
+    <item name="android:listViewStyle">@style/lightListView</item>
   </style>
-
+  <!-- fix for at PreferenceScreen var sort på sort på Android 2: Lav hvid baggrund på ListViews
+       Se også http://stackoverflow.com/questions/3164862/black-screen-in-inner-preferencescreen -->
+  <style name="lightListView">
+    <item name="android:background">@color/hvid</item>
+  </style>
 </resources>
