småt (oprydning + Fixet diverse advarsler fra Android lint)

--- a/DRRadiov3/res/layout/afspiller_levendeikon.xml
+++ b/DRRadiov3/res/layout/afspiller_levendeikon.xml
@@ -6,6 +6,7 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center_vertical"
+              android:baselineAligned="false"
               android:background="@color/grå70">
 
 
