--- a/DRRadiov3/res/layout/deskclock_alarm_clock.xml
+++ b/DRRadiov3/res/layout/deskclock_alarm_clock.xml
@@ -71,7 +71,7 @@
   <ListView
       android:id="@+id/alarms_list"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:layout_weight="1"/>
 
   <!-- style="?android:attr/buttonBarButtonStyle"  -->
