--- a/DRRadiov3/res/layout/deskclock_alarm_time_elemento.xml
+++ b/DRRadiov3/res/layout/deskclock_alarm_time_elemento.xml
@@ -102,7 +102,7 @@
                   android:layout_weight="2"
   -->
   <TextView android:id="@+id/label"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_gravity="fill_vertical"
             android:layout_weight="1"
