--- a/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
+++ b/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
@@ -59,7 +59,7 @@
       <TextView
           android:id="@+id/linje2"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_height="0dp"
           android:layout_weight="1"
           android:text="P3 Sporten  |  Polarkreis 18"
           android:maxLines="2"
