--- a/DRRadiov3/res/layout/hoved_akt.xml
+++ b/DRRadiov3/res/layout/hoved_akt.xml
@@ -60,7 +60,7 @@
         android:textColor="@color/hvid"
         android:shadowColor="@color/rød"
         android:shadowRadius="2"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:layout_marginBottom="@dimen/afspiller_kollapset_højde"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
