Flere lint-advarsler - strenge flyttet fra layouts til strings.xml

--- a/DRRadiov3/res/layout/afspiller_levendeikon.xml
+++ b/DRRadiov3/res/layout/afspiller_levendeikon.xml
@@ -18,14 +18,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="D R"
+        android:contentDescription="@string/D_R"
         android:src="@drawable/dr_logo"
         />
     <ImageView
         android:layout_width="60dp"
         android:layout_height="44dp"
         android:scaleType="center"
-        android:contentDescription="start/stop"
+        android:contentDescription="@string/start_stop"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:id="@+id/startStopKnap"
