--- a/DRRadiov3/res/layout/udsendelse_elem2_overskrift_playliste_info.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem2_overskrift_playliste_info.xml
@@ -16,8 +16,8 @@
       android:layout_weight="1"
       android:layout_marginRight="1dp"
       android:layout_marginLeft="16dp"
-      android:text="PLAYLISTE"
-      android:contentDescription="playliste"
+      android:text="@string/PLAYLISTE"
+      android:contentDescription="@string/playliste"
       android:textColor="@color/hvid"
       android:background="@drawable/knap_sort_bg"/>
 
@@ -28,8 +28,8 @@
       android:layout_weight="1"
       android:layout_marginLeft="1dp"
       android:layout_marginRight="16dp"
-      android:text="INFO"
-      android:contentDescription="info"
+      android:text="@string/INFO"
+      android:contentDescription="@string/info"
       android:textColor="@color/hvid"
       android:background="@drawable/knap_graa40_bg"/>
 
