--- a/DRRadiov3/res/layout/deskclock_set_alarm.xml
+++ b/DRRadiov3/res/layout/deskclock_set_alarm.xml
@@ -63,7 +63,7 @@
             android:layout_margin="8dp"
             android:textSize="@dimen/metainfo_skrifstørrelse"
             android:background="@drawable/knap_blaa_bg"
-            android:text="ANNULLER"/>
+            android:text="@string/revert"/>
 
     <!--
                 style="?android:attr/buttonBarButtonStyle"
