--- a/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
+++ b/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
@@ -70,7 +70,7 @@
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:id="@+id/startStopKnap"
-        android:contentDescription="pause"
+        android:contentDescription="@string/pause"
         android:background="@drawable/elem_hvid_bg"
         android:src="@drawable/dri_radio_pause_graa40"/>
 
@@ -79,7 +79,7 @@
         android:layout_height="44dp"
         android:layout_marginLeft="8dp"
         android:id="@+id/slet"
-        android:contentDescription="slet udsendelse"
+        android:contentDescription="@string/delete"
         android:background="@drawable/elem_hvid_bg"
         android:src="@drawable/dri_skraldespand_graa40"
         />
