--- a/DRRadiov3/res/layout/kanalvalg_elem.xml
+++ b/DRRadiov3/res/layout/kanalvalg_elem.xml
@@ -26,7 +26,7 @@
         android:id="@+id/billede"
         android:layout_width="wrap_content"
         android:layout_marginTop="8dp"
-        android:contentDescription="P4"
+        android:contentDescription="P4" tools:ignore="HardcodedText"
         android:layout_height="wrap_content"
         android:src="@drawable/kanalappendix_p4f"/>
 
@@ -44,7 +44,7 @@
           android:layout_marginLeft="10dp"
           android:layout_marginTop="8dp"
           android:textAppearance="?android:attr/textAppearance"
-          />
+          tools:ignore="HardcodedText"/>
 
 
     </LinearLayout>
