--- a/DRRadiov35/app/src/main/res/values/dr_strings.xml
+++ b/DRRadiov35/app/src/main/res/values/dr_strings.xml
@@ -50,7 +50,7 @@
   <string name="Gem_udsendelser_på">Gem udsendelser på</string>
   <string name="Vælg_hvor_på_telefonen_du_vil_gemme_udsendelser_til_offline_brug_">Vælg hvor på telefonen du vil gemme udsendelser til offline brug.</string>
   <string name="Hent_kun_på_wifi">Hent kun på wifi</string>
-  <string name="Udsendelser_hentes_kun_over_wifi_fremover___">Udsendelser hentes kun over wifi fremover.\\n(er en udsendelse i gang med at blive hentet skal du stoppe og genoptage hentning af den før det træder i kraft)</string>
+  <string name="Udsendelser_hentes_kun_over_wifi_fremover___">Udsendelser hentes kun over wifi fremover.\n(er en udsendelse i gang med at blive hentet skal du stoppe og genoptage hentning af den før det træder i kraft)</string>
   <string name="Udsendelser_hentes_både_over_telefonnet_3g_4g_og_wifi_">Udsendelser hentes både over telefonnet (3G/4G) og wifi.</string>
   <string name="Kun_til_udviklere">Kun til udviklere</string>
   <string name="Beklager_kan_ikke_spille_radio">Beklager, kan ikke spille radio</string>
@@ -68,7 +68,7 @@
   <string name="D_R_Radio_Indstillinger">D R Radio Indstillinger</string>
   <string name="__ikke_tilgængelig_">" (ikke tilgængelig)"</string>
   <string name="ledig">"ledig"</string>
-  <string name="Fejl__adgang_til_eksternt_lager_mangler_indsæt_sd_kort_">"Fejl - adgang til eksternt lager mangler (indsæt SD-kort)"</string>
+  <string name="Fejl__adgang_til_eksternt_lager_mangler_indsæt_sd_kort_">"Fejl - adgang til eksternt lager mangler (isæt et SD-kort)"</string>
   <string name="Netværksfejl_prøv_igen_senere">Netværksfejl, prøv igen senere</string>
   <string name="SPILLER">"SPILLER"</string>
   <string name="HØR">"HØR"</string>
