--- a/DRRadiov35/app/src/main/res/values/dr_strings.xml
+++ b/DRRadiov35/app/src/main/res/values/dr_strings.xml
@@ -116,6 +116,7 @@
   <string name="Det_lykkedes_ikke_at_hente_udsendelsen___tjek_at___">Det lykkedes ikke at hente udsendelsen %1$s\nTjek at du har tilstrækkeligt ledigt plads</string>
   <string name="Forbinder">Forbinder</string>
   <string name="Angiv_vækning">Angiv vækning</string>
+  <string name="Indlæser_vent_venligst___">Indlæser, vent venligst...</string>
 
   <string-array name="lydformat_tekst">
     <item>AAC (HLS)</item>
